--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,12 +1,5 @@
 <div id="<%= dom_id category %>">
-  <p>
-    <strong>Name:</strong>
-    <%= category.name %>
-  </p>
-
-  <p>
-    <strong>Icon:</strong>
-    <%= category.icon %>
-  </p>
-
+  <div class="icon_container"><img src="<%= category.icon%>" class="w-24"></div>
+  <div><%= category.name%></div>
+  <div>$<%= category.total_amount%></div>
 </div>
