Add exchanges views

--- a/app/views/exchanges/_exchange.html.erb
+++ b/app/views/exchanges/_exchange.html.erb
@@ -1,12 +1,4 @@
 <div class="exchange">
-  <p>
-    <strong>Name:</strong>
-    <%= exchange.name %>
-  </p>
-
-  <p>
-    <strong>Amount:</strong>
-    <%= exchange.amount %>
-  </p>
-
+  <div class="axchange_amount">$<%= exchange.amount%></div>
+  <div><%= exchange.name%></div>
 </div>
