--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <main class="main">
       <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <p class="alert red_col"><%= alert %></p>
       <%= yield %>
     </main>
   </body>
