Make some modification to the style

--- a/app/assets/stylesheets/base/_home.scss
+++ b/app/assets/stylesheets/base/_home.scss
@@ -1,3 +1,5 @@
+@import url(//db.onlinewebfonts.com/c/0376a58122a881d16a294512d3c947b1?family=ProximaNova-Regular);
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lato&display=swap');
 @import './variables';
 @import './mixins';
 
@@ -8,8 +10,9 @@
 
   .heading {
     .title {
+      font-size: 3.2rem;
       padding: 0 0 200px 0;
-      font-family: $dancing_script_font;
+      font-family: 'Dancing Script', sans-serif;
       font-weight: 900;
       color: $prim_gray_col;
     }
