Correct the typo errors

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -18,8 +18,8 @@
         <% end %>
       <% end %>
     <% end %>
-    </div>
-    <div class="new_category_btn text_white">
-      <%= link_to "Add New Category", new_category_path, class: "Add_categ_btn text_white text-center" %>
-    </div>
+  </div>
+  <div class="new_category_btn text_white">
+    <%= link_to "Add Category", new_category_path, class: "Add_categ_btn text_white text-center" %>
+  </div>
 </section>
