--- a/app/views/exchanges/_form.html.erb
+++ b/app/views/exchanges/_form.html.erb
@@ -12,7 +12,7 @@
       </div>
     <% end %>
 
-    <div class="filed">
+    <div class="field">
       <%= form.label :name, class: "label" %> <br> 
       <%= form.text_field :name, placeholder: "Enter the transaction's name" %>
     </div>
