--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
 
     <div class="field">
       <%= f.label :email, class: "label" %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Enter your email address" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Enter your email" %>
     </div>
 
     <div class="field">
@@ -24,13 +24,13 @@
 
     <div class="field">
       <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm your password" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Enter your password again" %>
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up", class: "bg_col_blue text_white signup_submit" %>
+      <%= f.submit "Sign up", class: 'bg_col_blue text_white signup_submit' %>
     </div>
   <% end %>
 
   <%= render "devise/shared/links" %>
-</div>
+  </div>
