--- a/app/views/exchanges/index.html.erb
+++ b/app/views/exchanges/index.html.erb
@@ -1,22 +1,22 @@
 <section class="exchanges-section">
   <div class="header">
-    <div class="justify-self_start">
+    <div class="justify-self-start">
       <%= link_to categories_path, class: "back_btn text_white" do %>
-        <span class="back">&#8701;</span>
+          <span class="back">&#8701;</span>
       <% end %>
     </div>
-    <h2 class="text_white">All Transactions for <span><%= @category.name %></span></h2>
+    <h2 class="text_white">Transactions for <span><%= @category.name %></span></h2>
     <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "sign_out text_white" %>
   </div>
 
-  <div class="total_txt text-center ">TOTAL: $<%=@category.total_amount%> </div>
+  <div class="total_txt text-center">TOTAL: $<%=@category.total_amount%> </div>
 
   <div class="exchanges">
     <% if @exchanges.length == 0 %>
-      <p class="empty_data text_center">No transaction yet, Add a new one!!!</p>
+      <p class="empty_data text-center">No transaction yet. Add a new one!!!</p>
     <% else %>
-      <%= @exchanges.each do |exchange| %>
-        <% render exchange %>
+      <% @exchanges.each do |exchange| %>
+        <%= render exchange %>
       <% end %>
     <% end %>
   </div>
