--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,12 @@
 <div class="forms_section">
   <h2 class="text-center">Sign up</h2>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {'data-turbo' => false}) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field">
       <%= f.label :name, class: "label" %><br />
-      <%= f.text_field :name, placeholder: "Enter your full name" %>
+      <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "Enter your full name" %>
     </div>
 
     <div class="field">
